--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href="#">Elvira Baimurzaeva</a>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
+  <header class="header">
+    <nav class="header-nav">
+      <a class="header-logo" href="#">Elvira Baimurzaeva</a>
+      <ul class="menu">
+        <li class="menu-item">
+          <a class="menu-link" href="index.html">Home</a>
         </li>
-        <li>
-          <a href="#about">About me</a>
+        <li class="menu-item">
+          <a class="menu-link" href="#about">About me</a>
         </li>
-        <li>
-          <a href="#skills">Skills</a>
+        <li class="menu-item">
+          <a class="menu-link" href="#skills">Skills</a>
         </li>
-        <li>
-          <a href="#edu">Education</a>
+        <li class="menu-item">
+          <a class="menu-link" href="#edu">Education</a>
         </li>
-        <li>
-          <a href="#lang">Languages</a>
+        <li class="menu-item">
+          <a class="menu-link" href="#lang">Languages</a>
         </li>
-        <li>
-          <a href="#contact">Contacts</a>
+        <li class="menu-item">
+          <a class="menu-link" href="#contact">Contacts</a>
         </li>
       </ul>
     </nav>
