--- a/index.html
+++ b/index.html
@@ -11,50 +11,57 @@
 
 <body>
   <header class="header">
-    <nav class="header-nav">
-      <a class="header-logo" href="#">Elvira Baimurzaeva</a>
-      <ul class="menu">
-        <li class="menu-item">
-          <a class="menu-link" href="index.html">Home</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#about">About me</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#skills">Skills</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#edu">Education</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#lang">Languages</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#contact">Contacts</a>
-        </li>
-      </ul>
-    </nav>
 
-    <img src="img/photo.jpeg" width="200" alt="Elvira">
-    <h1>Elvira Baimurzaeva</h1>
-    <h3>Contacts</h3>
-    <ul>
-      <li>
-        <h4 id="contact">Location</h4>
-        <p>Kyrgyz Republic, Bishkek</p>
-      </li>
-      <li>
-        <h4>Phone number</h4>
-        <a href="tel:00996557003306">+996-557-00-33-06</a>
-      </li>
-      <li>
-        <h4>Email</h4>
-        <a href="mailto:elvira.baimurzaeva.kk@gmail.com">elvira.baimurzaeva.kk@gmail.com</a>
-      </li>
-    </ul>
-    <a href="contact.html">Contact me</a>
-    <hr>
+    <div class="container">
+      <nav class="header-nav">
+        <a class="header-logo" href="#">Elvira Baimurzaeva</a>
+        <ul class="header-menu">
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="index.html">Home</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="#about">About me</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="#skills">Skills</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="#edu">Education</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="#lang">Languages</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="#contact">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
+  <img src="img/photo.jpeg" width="200" alt="Elvira">
+  <h1>Elvira Baimurzaeva</h1>
+  <h3>Contacts</h3>
+  <ul>
+    <li>
+      <h4 id="contact">Location</h4>
+      <p>Kyrgyz Republic, Bishkek</p>
+    </li>
+    <li>
+      <h4>Phone number</h4>
+      <a href="tel:00996557003306">+996-557-00-33-06</a>
+    </li>
+    <li>
+      <h4>Email</h4>
+      <a href="mailto:elvira.baimurzaeva.kk@gmail.com">elvira.baimurzaeva.kk@gmail.com</a>
+    </li>
+  </ul>
+  <a href="contact.html">Contact me</a>
+  <hr>
+
+
+
+
+
 
   <main>
     <section>
@@ -134,6 +141,7 @@
       <a href="https://www.instagram.com/">Me on Instagram</a>
     </p>
   </footer>
+
 </body>
 
 </html>
