--- a/index.html
+++ b/index.html
@@ -38,8 +38,27 @@
       </nav>
     </div>
   </header>
-  <img src="img/photo.jpeg" width="200" alt="Elvira">
-  <h1>Elvira Baimurzaeva</h1>
+  <main>
+    <section class="intro">
+      <div class="container">
+        <div class="intro-inner">
+          <img src="img/photo.jpeg" widht="200 px" alt="Elvira">
+        </div>
+        <div class="intro-text">
+          <h1>Elvira Baimurzaeva</h1>
+          <h2 id="about">About me</h2>
+          <p>I am a future <b>Front-end Developer</b>. I am 32 and I am a mom of 4 children.
+            I work as a call center operator, but dream of working as a programmer.<br> I am sure that with my
+            aspiration
+            and desire I will become the <strong>best programmer</strong>.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+
+
   <h3>Contacts</h3>
   <ul>
     <li>
@@ -57,19 +76,9 @@
   </ul>
   <a href="contact.html">Contact me</a>
   <hr>
-
-
-
-
-
-
   <main>
     <section>
-      <h2 id="about">About me</h2>
-      <p>I am a future <b>Front-end Developer</b>. I am 32 and I am a mom of 4 children.
-        I work as a call center operator, but dream of working as a programmer.<br> I am sure that with my aspiration
-        and desire I will become the <strong>best programmer</strong>.
-      </p>
+
     </section>
     <hr>
     <section>
