--- a/index.html
+++ b/index.html
@@ -42,16 +42,20 @@
     <section class="intro">
       <div class="container">
         <div class="intro-inner">
-          <img src="img/photo.jpeg" widht="200 px" alt="Elvira">
-        </div>
-        <div class="intro-text">
-          <h1>Elvira Baimurzaeva</h1>
-          <h2 id="about">About me</h2>
-          <p>I am a future <b>Front-end Developer</b>. I am 32 and I am a mom of 4 children.
-            I work as a call center operator, but dream of working as a programmer.<br> I am sure that with my
-            aspiration
-            and desire I will become the <strong>best programmer</strong>.
-          </p>
+          <div class="intro-left">
+
+            <img class="intro-img" src="img/photo.jpeg" widht="200 px" alt="Elvira">
+          </div>
+
+          <div class="intro-right">
+            <h1>Elvira Baimurzaeva</h1>
+            <h3 id="about">About me</h3>
+            <p>I am a future <b>Front-end Developer</b>. I am 32 and I am a mom of 4 children.
+              I work as a call center operator, but dream of working as a programmer.<br> I am sure that with my
+              aspiration
+              and desire I will become the <strong>best programmer</strong>.
+            </p>
+          </div>
         </div>
       </div>
     </section>
