--- a/index.html
+++ b/index.html
@@ -59,26 +59,35 @@
         </div>
       </div>
     </section>
+    <section class="contacts">
+      <div class="container">
+        <h2 class="section-title">Contacts</h2>
+
+        <ul>
+          <li>
+            <h4 id="contact">Location</h4>
+            <p>Kyrgyz Republic, Bishkek</p>
+          </li>
+          <li>
+            <h4>Phone number</h4>
+            <a href="tel:00996557003306">+996-557-00-33-06</a>
+          </li>
+          <li>
+            <h4>Email</h4>
+            <a href="mailto:elvira.baimurzaeva.kk@gmail.com">elvira.baimurzaeva.kk@gmail.com</a>
+          </li>
+          <li>
+            <h4>Contact me</h4>
+            <a href="contact.html">Send message</a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
 
 
-  <h3>Contacts</h3>
-  <ul>
-    <li>
-      <h4 id="contact">Location</h4>
-      <p>Kyrgyz Republic, Bishkek</p>
-    </li>
-    <li>
-      <h4>Phone number</h4>
-      <a href="tel:00996557003306">+996-557-00-33-06</a>
-    </li>
-    <li>
-      <h4>Email</h4>
-      <a href="mailto:elvira.baimurzaeva.kk@gmail.com">elvira.baimurzaeva.kk@gmail.com</a>
-    </li>
-  </ul>
-  <a href="contact.html">Contact me</a>
+
   <hr>
   <main>
     <section>
