--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
         </ul>
       </div>
     </section>
+    <section id="skills" class="skills">
+      <div class="container">
+        <h2 class="section-title">Skills</h2>
+        <ul>
+          <li>Html</li>
+          <li>CSS</li>
+          <li>GitHub</li>
+          <li>VS Code</li>
+          <li>Figma</li>
+        </ul>
+      </div>
+    </section>
   </main>
 
 
@@ -96,12 +108,6 @@
     <hr>
     <section>
       <h2 id="skills">Skills</h2>
-      <ul>
-        <li>Html</li>
-        <li>CSS</li>
-        <li>VS Code</li>
-        <li>Figma</li>
-      </ul>
       <h3>My experience on Figma:</h3>
       <a href="figma.html">
         <img src="img/photo.png" width="1000" alt="shop">
