add code example

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a class="header-menu-link" href="#edu">Education</a>
           </li>
           <li class="header-menu-item">
+            <a class="header-menu-link" href="#code">Code Example</a>
+          </li>
+          <li class="header-menu-item">
             <a class="header-menu-link" href="#lang">Languages</a>
           </li>
           <li class="header-menu-item">
@@ -83,7 +86,7 @@
         </ul>
       </div>
     </section>
-    <section id="skills" class="skills">
+    <section id="skills" class="skills section">
       <div class="container">
         <h2 class="section-title">Skills</h2>
         <ul>
@@ -95,9 +98,29 @@
         </ul>
       </div>
     </section>
+    <section class="code-example section">
+      <div class="container">
+        <h2 id="code" class="section-title">Code Example</h2>
+        <p>
+          <b>Task:</b>Lorem ipsum dolor sit amet consectetur.
+        </p>
+        <pre>
+          <code>
+            h2 {  
+              color: #B1967C;  
+              font-family: 'Kurale', 'Arial Black', serif;  
+              font-weight: normal;  
+              font-size: 2.2em;  
+            }
+          </code>
+        </pre>
+      </div>
+    </section>
   </main>
 
 
+  </section>
+  <hr>
 
 
   <hr>
@@ -107,7 +130,7 @@
     </section>
     <hr>
     <section>
-      <h2 id="skills">Skills</h2>
+      <h2 id=" skills">Skills</h2>
       <h3>My experience on Figma:</h3>
       <a href="figma.html">
         <img src="img/photo.png" width="1000" alt="shop">
@@ -116,50 +139,38 @@
     <hr>
     <section>
       <h2>Code Example</h2>
-      <pre>
-        <code>
-          h2 {  
-            color: #B1967C;  
-            font-family: 'Kurale', 'Arial Black', serif;  
-            font-weight: normal;  
-            font-size: 2.2em;  
-          }
-        </code>
-      </pre>
-    </section>
-    <hr>
 
-    <section>
-      <h2 id="edu">Education</h2>
-      <ul>
-        <li>
-          <b>Osh State University</b>, Faculty of Foreign Languages, German Language
-        </li>
-        <li>
-          <b>Osh State University</b>, Faculty of Business and Management, Accountant
-        </li>
-      </ul>
-    </section>
-    <hr>
-    <section>
-      <h2 id="lang">Languages</h2>
-      <ul>
-        <li>
-          <b>German</b>
-        </li>
-        <li>
-          <b>English</b>
-        </li>
-        <li>
-          <b>Russian</b>
-        </li>
-        <li>
-          <b>Kyrgyz</b>
-        </li>
-      </ul>
+      <section>
+        <h2 id="edu">Education</h2>
+        <ul>
+          <li>
+            <b>Osh State University</b>, Faculty of Foreign Languages, German Language
+          </li>
+          <li>
+            <b>Osh State University</b>, Faculty of Business and Management, Accountant
+          </li>
+        </ul>
+      </section>
+      <hr>
+      <section>
+        <h2 id="lang">Languages</h2>
+        <ul>
+          <li>
+            <b>German</b>
+          </li>
+          <li>
+            <b>English</b>
+          </li>
+          <li>
+            <b>Russian</b>
+          </li>
+          <li>
+            <b>Kyrgyz</b>
+          </li>
+        </ul>
 
-    </section>
-    <hr>
+      </section>
+      <hr>
 
   </main>
 
