--- a/index.html
+++ b/index.html
@@ -116,67 +116,44 @@
         </pre>
       </div>
     </section>
+    <section class="education">
+      <div class="container">
+
+        <h2 id="edu" class="section-title">Education</h2>
+        <ul>
+          <li>
+            <b>Osh State University</b>, Faculty of Foreign Languages, German Language
+          </li>
+          <li>
+            <b>Osh State University</b>, Faculty of Business and Management, Accountant
+          </li>
+        </ul>
+
+      </div>
+    </section>
+    <section class="lang">
+      <div class="container">
+        <h2 id="lang" class="section-title">Languages</h2>
+        <ul>
+          <li>German</li>
+          <li>English </li>
+          <li>Russian</li>
+          <li>Kyrgyz</li>
+        </ul>
+      </div>
+    </section>
   </main>
 
-
-
-
-
-
-
-
-
-  <section>
-    <h2 id=" skills">Skills</h2>
-    <h3>My experience on Figma:</h3>
-    <a href="figma.html">
-      <img src="img/photo.png" width="1000" alt="shop">
-    </a>
-  </section>
-  <hr>
-  <section>
-    <h2>Code Example</h2>
-
-    <section>
-      <h2 id="edu">Education</h2>
-      <ul>
-        <li>
-          <b>Osh State University</b>, Faculty of Foreign Languages, German Language
-        </li>
-        <li>
-          <b>Osh State University</b>, Faculty of Business and Management, Accountant
-        </li>
+  <footer>
+    <div class="container">
+      <ul class="social-icons">
+        <li><a href="http://www.facebook.com"><img src="img/f.png" /></a></li>
+        <li><a href="http://www.instagram.com"><img src="img/insta.png" /></a></li>
+        <li><a href="http://www.youtube.com"><img src="img/youtube.jpg" /></a></li>
       </ul>
-    </section>
-    <hr>
-    <section>
-      <h2 id="lang">Languages</h2>
-      <ul>
-        <li>
-          <b>German</b>
-        </li>
-        <li>
-          <b>English</b>
-        </li>
-        <li>
-          <b>Russian</b>
-        </li>
-        <li>
-          <b>Kyrgyz</b>
-        </li>
-      </ul>
-
-    </section>
-    <hr>
-
-    </main>
-
-    <footer>
-      <p>&copy; 2022
-        <a href="https://www.facebook.com/">Me on Facebook</a>
-        <a href="https://www.instagram.com/">Me on Instagram</a>
-      </p>
-    </footer>
+      <p>&copy; 2022</p>
+    </div>
+  </footer>
 
 </body>
 
